--- a/flight-details-app.yml
+++ b/flight-details-app.yml
@@ -1,2 +1,2 @@
-disabled.flights: vistara , indigo
-disabled.airports : chennai , lucknow
+disabled.flights: Vistara , Indigo
+disabled.airports : Chennai , Lucknow
